fix(indexing): omit sub-resource if main value is blank
Related: MSEARCH-1084